# Autonomous_AI_Challenge

./: .gitignore  README.md  augmentation_fda.py  pyproject.toml
notebooks/traffic_light/: detection_visualization.ipynb  mmdetection_pkl_visualization.ipynb  mmdetection_visualization.ipynb  split_labels_coco_traffic_light.ipynb  test_visualization.ipynb  wbf.ipynb  xywhn_detection_visualization.ipynb  yolo2coco_test_traffic_light.ipynb  yolo2coco_test_traffic_light.py  yolo2coco_traffic_light.ipynb  yolo2coco_traffic_light.py
src/: datasets.py  inference.py  lr.py  models.py  train.py
src/.old/: custom_train.py  dataloader.py  dataset.py  loss.py  model.py  otim.py  train.py
src/utils/: collate_fn.py  compute_metrics.py
traffic_transformer/: conda_list.txt  conda_list.yml
traffic_transformer/postprocessing/: ensemble.py  pkl2txt_traffic_light.py
traffic_transformer/preprocessing/: data_augmentation.py  split_3_dataset_traffic_light.py  split_dataset_traffic_light.py  yolo2coco_test_traffic_light.py  yolo2coco_train_val_traffic_light.py
traffic_transformer/tools/: test_co_detr.py  test_dino_swin.py
traffic_transformer/visualization/: visualization.ipynb
ultra/: Data_Preparation.py  GETTING_STARTED.md  README.md  Test_data_Preparation.py  export_result_detect.py  export_result_segment.py  seg_Inference_Icon.ipynb  seg_inference_Icon.py  split_3_dataset_segmentation.py  split_3_dataset_traffic_light.py  split_dataset.py  split_dataset_segmentation.py  split_dataset_traffic_light.py  test_tta2.py  test_tta_result.py
ultra/tests/: Export_Result_detect.py  (+5 more)
(+26 files in other folders)
