[tool.poetry]
name = "autonomous-ai-challenge"
version = "0.1.0"
description = ""
authors = ["unerue <unerue@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
torch = {version = "2.3.1+cu121", source = "pytorch"}
torchvision = {version = "0.18.1+cu121", source = "pytorch"}
ultralytics = "^8.3.8"
albumentations = "^1.4.18"
transformers = "^4.45.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
